2009-11-13	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/cgi-bin/redir.cgi: Validating if $cgi->user_agent is defined. 
	Fixes #850;
	http://www.packetfence.org/mantis/view.php?id=850

2009-11-10      Regis Balzard <rbalzard@inverse.ca>
	* pf/html/admin/configuration/switches_edit.php: 
	* pf/html/admin/configuration/switches_add.php: Fixed issues with SSH
	for CLI transport. Should be set to 'SSH' rather than 'ssh'

	* pf/sbin/pfsetvlan: Fixed issues with desAssociate trap for Wireless.
	Threads don't support SSH CLI transport mode. So we fork a call to 
	'pfcmd_vlan -deauthenticate ...'

2009-11-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/addons/802.1X/rlm_perl_packetfence.pl: Rewrite of our freeradius
	802.1x perl module. Resolving problems with guests (visitors) and 
	registered users in secure SSID. Fixes 839, 841;
	Also, VISITOR is now called GUEST and improved documentation while I 
	was at it.
	http://www.packetfence.org/mantis/view.php?id=839
	http://www.packetfence.org/mantis/view.php?id=841

2009-11-03	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php: Fixed typo in switch 
	definition in the Web Admin causing problems adding or editing a Cisco 
	Catalyst 2970, 3500XL and wireless Controller 4400. Fixes 836; 
	http://www.packetfence.org/mantis/view.php?id=836
	Backported from the 1.9 branch.

2009-11-02	Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/services.pm: Fixed missing library requirement when using
	PacketFence with routed VLANs

2009-10-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Correctly pinned Parse::RecDescent dependency to
	version 1.94 which is known to work. Fixes #806;
	http://www.packetfence.org/mantis/view.php?id=806

2009-10-28	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/NEWS, pf/packetfence.spec: 1.8.5 ready

	* pf/lib/pf/services.pm: In conf/switches.conf uplink=dynamic is no
	longer case-sensitive. Fixes #831;